# foldism

./: .gitignore  README.md  deploy.sh  foldism.py  index.html  modal_alphafold.py  modal_boltz.py  modal_chai1.py  modal_protenix.py  pyproject.toml  test.faa  test_cli.py  test_cli.sh  test_tui.sh  test_web.sh
backends/: __init__.py  alphafold.py  alphafold2.py  boltz.py  chai1.py  colabsearch.py  common.py  esmfold2.py  openfold3.py  protenix.py
scripts/: upload_protenix_shared.py
