[project]
name = "foldism"
version = "0.1.0"
description = "Multi-algorithm protein structure prediction with Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.0",
]

[project.optional-dependencies]
tui = [
    "textual>=1.0",
]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
